Fri Aug 08 17:09:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Added an offset for the emblem on buddy status icons.

Fri Aug 08 16:43:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	* gaim.pro:
	  - Added QGaimImageUtils, put status icons in the buddy list, and
	    added login/logout door icons.

Fri Aug 08 03:59:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mktarball.sh:
	  - The generated tarball directory name and filename now include
	    the release number.

Thu Aug 07 02:00:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* gaim.pro:
	  - Split the buddy list code out of the buddy list window and into
	    its own widget.

Wed Aug 06 21:24:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	  - Synced with the changes in gaim CVS.

Mon Aug 04 01:30:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Hopefully prevented chat tabs from indicating that there's new
	    messages in it when you're already on that tab.

Mon Aug 04 01:27:08 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/userlist.png:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* gaim.pro:
	  - Added a user list to chats.

Mon Aug 04 00:47:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimRequest.cpp:
	* src/QGaimRequest.h:
	* src/main.cpp:
	* gaim.pro:
	  - Added a basic request UI. Unfortunately, many things have
	    issues in it. Hopefully it won't cause too much trouble.

Sun Aug 03 23:48:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Added basic chat UI support.

Sun Aug 03 23:19:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
